--- a/springboot-master/springboot-master/pom.xml
+++ b/springboot-master/springboot-master/pom.xml
@@ -32,7 +32,11 @@
         <dependency>
     		<groupId>org.thymeleaf.extras</groupId>
     		<artifactId>thymeleaf-extras-springsecurity5</artifactId>
-		</dependency>				
+		</dependency>
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-core</artifactId>
+		</dependency>			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
