--- a/springboot-master/springboot-master/src/main/resources/application.properties
+++ b/springboot-master/springboot-master/src/main/resources/application.properties
@@ -18,8 +18,8 @@ myapp.datasouce.driverClassName=org.h2.Driver
 myapp.datasource.username=sa
 myapp.datasource.password=
 # if you want your data persisted in a file, uncomment the next line and define filename and comment the line after the next line
-#myapp.datasource.jdbcurl=jdbc:h2:file:/tmp/myappdb.db;
-myapp.datasource.url=jdbc:h2:mem:myappdb;
+myapp.datasource.jdbcurl=jdbc:h2:file:/tmp/myappdb.db;AUTO_SERVER=TRUE
+#myapp.datasource.url=jdbc:h2:mem:myappdb;
 
 
 
@@ -46,7 +46,7 @@ session.datasource.password=
 # change the port to use for the embedded web-server
 # the default value is 8080
 #server.port=8080
-spring.mvc.format.date=yyyy-MM-dd
+#spring.mvc.format.date=yyyy-MM-dd
 
 
 ## Template settings
