fix tests, refactor CustomerType enum

--- a/springboot-master/springboot-master/src/main/resources/application.properties
+++ b/springboot-master/springboot-master/src/main/resources/application.properties
@@ -18,8 +18,8 @@ myapp.datasouce.driverClassName=org.h2.Driver
 myapp.datasource.username=sa
 myapp.datasource.password=
 # if you want your data persisted in a file, uncomment the next line and define filename and comment the line after the next line
-myapp.datasource.jdbcurl=jdbc:h2:file:/tmp/myappdb.db;AUTO_SERVER=TRUE
-#myapp.datasource.url=jdbc:h2:mem:myappdb;
+#myapp.datasource.jdbcurl=jdbc:h2:file:/tmp/myappdb.db;AUTO_SERVER=TRUE
+myapp.datasource.url=jdbc:h2:mem:myappdb;
 
 
 
